# papervault

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 202607070001_initial_core_schema.py  202607070002_document_text_extractions.py  202607080001_document_ai_outputs.py  202607080002_search_notifications.py  202607080003_identity_auth_fields.py  202607110001_document_text_pages.py  202607110002_processing_and_instance_settings.py  202607110003_document_text_chunks.py  202607110004_review_and_ocr_geometry.py  202607110005_document_source_versions.py  202607120001_document_duplicate_fingerprints.py  202607170001_smart_tags_and_collections.py
apps/api/src/papervault_api/: main.py
apps/api/src/papervault_api/administration/: __init__.py
apps/api/tests/: conftest.py  test_collections_and_smart_tags.py  test_collections_api.py  test_document_ai.py  test_document_processing.py  test_document_text_search.py  test_document_types.py  test_document_uploads.py  test_document_versions.py  test_duplicate_detection.py  test_health.py  test_identity_auth.py  test_metadata_normalization.py  test_model_providers.py  test_persistence_models.py  test_phase5_services.py  test_questions.py  test_search_indexing.py  test_text_extractors.py  test_user_deletion.py  test_vault_timeline.py  test_worker_tasks.py
apps/api/tests/fixtures/: provider_evaluations.json
docs/: api.md  architecture.md  (+4 more)
(+196 files in other folders)
