[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papervault-api"
version = "0.1.0"
description = "PaperVault FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "boto3>=1.35.0",
  "celery[redis]>=5.5.0",
  "fastapi>=0.115.0",
  "opentelemetry-api>=1.34.0",
  "opentelemetry-exporter-otlp>=1.34.0",
  "opentelemetry-instrumentation-fastapi>=0.55b0",
  "opentelemetry-sdk>=1.34.0",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.9.0",
  "pypdf>=5.1.0",
  "python-multipart>=0.0.20",
  "sqlalchemy[asyncio]>=2.0.40",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0",
  "httpx>=0.28.0",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["papervault_api"]
